# wins-finder-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
src/wins_finder/: __main__.py  logging_config.py
src/wins_finder/database/: SCHEMA.md  models.py
src/wins_finder/integrations/: github_client.py  linear_client.py  notion_client.py  slack_client.py
src/wins_finder/llm/: analyzer.py
src/wins_finder/mcp/: server.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_database.py  test_github_client.py  test_linear_client.py  test_mcp_server.py
