[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wins-finder-mcp"
version = "0.1.0"
description = "MCP Agent that analyzes work activity to generate intelligent weekly accomplishment reports"
requires-python = ">=3.13"
dependencies = [
    # MCP Server (FastMCP for synchronous support)
    "fastmcp==2.11.3",
    
    # HTTP & API calls
    "requests==2.32.5",
    "PyGithub==2.7.0",
    
    # Database
    "sqlalchemy==2.0.43",
    
    # LLM Integration (OpenRouter via OpenAI client)
    "openai==1.101.0",
    
    # Minimal utilities
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "structlog==25.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[project.scripts]
wins-finder = "wins_finder.__main__:main"

[tool.ruff]
line-length = 88
target-version = "py313"